--- a/ensemble_ad/GOAD/config.yaml
+++ b/ensemble_ad/GOAD/config.yaml
@@ -1,4 +1,4 @@
-Train:
+train:
   batch_size: 288
   lr: 0.001
   epochs: 16
@@ -6,9 +6,12 @@ Train:
   depth: 10
   widen_factor: 4
   s: 1
-  reg: False
+  reg: True
   eps: 0
 
 data:
   class_ind: 1
   dataset: cifar10
+
+model:
+  save_best: True
